staging/calculator-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: calculator-service-deployment
    namespace: staging
    labels:
      app:  calculator-service
spec:
  selector:
    matchLabels:
      app: calculator-service
  template:
    metadata:
      labels:
        app: calculator-service
    spec:
      containers:
      - name: calculator-service
        image: tiagomadeiradock/tokio-calculator-service:81a3a2f
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.1"
        ports:
          - name: http
            containerPort: 8000
      imagePullSecrets:
      - name: regcred
              
---
apiVersion: v1
kind: Service
metadata:
  name: calculator-internal-service
  namespace: staging
spec:
  selector:
    app: calculator-service
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: http
