staging/rest-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rest-service-deployment
    namespace: staging
    labels:
      app: rest-service
spec:
  selector:
    matchLabels:
      app: rest-service
  template:
    metadata:
      labels:
        app: rest-service
    spec:
      containers:
      - name: rest-service
        image: tiagomadeiradock/tokio-rest-service:94143e1

        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.1"
        ports:
          - name: http
            protocol: TCP
            containerPort: 8000
      imagePullSecrets:
      - name: regcred
              
---
apiVersion: v1
kind: Service
metadata:
  name: rest-internal-service
  namespace: staging
spec:
  selector:
    app: rest-service
  type: ClusterIP
  ports:
    - port: 8000
      protocol: TCP
      targetPort: http
