staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator-ingress
spec:
  rules:
  - host: staging.calculator.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rest-internal-service
            port: 
              number: 8080
